# cratefm

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  api_docs_pagination.md
crates/core/src/: db.rs  discogs.rs  discos.rs  lib.rs  models.rs
crates/core/src/database/: cursors.rs  images.rs  mod.rs  releases.rs  videos.rs
crates/core/src/discogs/: api.rs  fetch.rs  mod.rs  models.rs
crates/gui/: Cargo.toml
crates/gui/src/: main.rs
crates/gui/src/pages/: fetch.rs  images.rs  listen.rs  mod.rs  releases.rs  videos.rs
