[workspace]
members = [
    "crates/core",
    "crates/cli",
    "crates/gui",
]
resolver = "2"

[workspace.dependencies]
cratefm-core = { path = "crates/core" }

# Shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# GUI
iced = { version = "0.13", features = ["tokio"] }
