[package]
name = "gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cratefm-gui"
path = "src/main.rs"

[dependencies]
cratefm-core = { workspace = true }
iced = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
